Improve the class splitting between agent and boot jar.
Fixes #455